--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="jumbotron" id="home">
       <div class="container">
         <div class="text-center">
-          <img src="img/profile1.png" class="rounded-circle img-thumbnail">
+          <img src="img/kiki.jpeg" class="rounded-circle img-thumbnail">
           <h1 class="display-4">Kiki Lukman Hakim</h1>
           <h3 class="lead">Python Devloper</h3>
         </div>
